--- a/src/styles/match_view.css
+++ b/src/styles/match_view.css
@@ -6,6 +6,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+p {
+    margin: 0;
+}
+
+.comment {
+    margin: 0.8rem;
+}
+
 .match-view {
     justify-content: center;
 }
