--- a/src/styles/match_view.css
+++ b/src/styles/match_view.css
@@ -7,7 +7,8 @@ body {
 }
 
 p {
-    margin: 0;
+    margin: 0rem;
+    padding: 0rem;
 }
 
 .comment {
@@ -24,8 +25,9 @@ p {
 }
 
 .box {
-    width: 10vw;
-    height: 40px;
+    min-width: 10vw;
+    min-height: 40px;
+    height: auto;
 }
 
 .square-red {
@@ -37,28 +39,10 @@ p {
     border: 3px blue solid;
     background-color: rgb(175, 175, 255);
 }
-.blue-text {
-    color: blue;
-}
-
-.red-text {
-    color: red;
-}
 
 .title-bar {
     display: flex;
     justify-content: space-between;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.text-left {
-    text-align: left;
-}
-.text-center {
-    text-align: center;
 }
 
 .current-players {
@@ -84,10 +68,4 @@ p {
 
 .start-btn:active {
     background-color: rgb(24, 129, 25);
-}
-
-
-.justify-center {
-    text-align: center;
-    justify-content: center;
 }
