--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+}
+
 .v-flex {
     display: flex;
     flex-direction: column;
@@ -68,4 +73,16 @@
 
 .vw-85 {
     width: calc(85vw - 5px);
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.width-100 {
+    width: 100%;
+}
+.width-95 {
+    width: 95%;
 }
