--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -45,3 +45,19 @@ body {
 .filter-btn:active {
     background-color: #9cc490;
 }
+
+.btn {
+    padding: 1rem;
+    margin-bottom: 0.1rem;
+    background-color: var(--primary);
+    border-radius: 5px;
+    border: none;
+    backdrop-filter: blur(8px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 1);
+    color: var(--text-color);
+}
+
+.btn:hover {
+    background-color: var(--secondary);
+    color: var(--alt-text-color);
+}
