--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,7 @@
-.border-green {
+.border-primary {
     width: 100vw;
     height: 100vh;
-    border: 5px solid rgba(31,182,34,1);
+    border: 5px solid var(--primary);
     box-sizing: border-box;
     position: fixed;
     top: 0;
