--- a/src/styles/match_view.css
+++ b/src/styles/match_view.css
@@ -30,14 +30,16 @@ p {
     height: auto;
 }
 
-.square-red {
-    border: 3px red solid;
-    background-color: rgb(255, 175, 175);
+.square-home {
+    border: 3px var(--home-text-color) solid;
+    background-color: var(--home-color);
+    color: var(--home-text-color);
 }
 
-.square-blue {
-    border: 3px blue solid;
-    background-color: rgb(175, 175, 255);
+.square-away {
+    border: 3px var(--away-text-color) solid;
+    background-color: var(--away-color);
+    color: var(--away-text-color);
 }
 
 .title-bar {
@@ -50,22 +52,11 @@ p {
     justify-content: center;
 }
 
-.start-btn {
-    background-color: rgba(31,182,34,1);
-    border-radius: 5px;
-    outline: #aaaaaa solid 1px;
-    backdrop-filter: blur(8px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    border: none;
-    padding: 1rem 2rem;
-    margin: 1rem;
+.home-text {
+    color: var(--home-color);
 }
 
-.start-btn:hover {
-    background-color: rgb(29, 155, 31);
-    cursor: pointer;
+.away-text {
+    color: var(--away-color);
 }
 
-.start-btn:active {
-    background-color: rgb(24, 129, 25);
-}
